# thresholding

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  thresholding.pyi
.github/_workflows/: python-publish.yml
.github/workflows/: CI.yml
src/: custom_fpr.rs  lib.rs  n_sigma.rs  otsu.rs  utils.rs
thresholding/: __init__.py  custom_fpr.py  otsu.py
